--- a/test/Web/FakeN.Web.Test.csproj
+++ b/test/Web/FakeN.Web.Test.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpContextBuilderTests.cs" />
     <Compile Include="FileCollectionTests.cs" />
     <Compile Include="FormTests.cs" />
     <Compile Include="ContextTests.cs" />
